--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <!-- <h5>100% Human hair, Grade 12 A -- Cabello 100% humano, Grado 12 A</h5> -->
                 <div class="info">
                     <p>VIRGIN BRAZILIAN HAIR</p>
-                    <P>100% Human unprocesses Bundles</P>
+                    <P>100% Human unprocessed Bundles</P>
                     <p>Highest Quality Hair</p>
                     <p>Grade 10A & 12A</p>
                 </div>
@@ -42,15 +42,17 @@
             <div class="prices animate__animated animate__fadeInUp">
 
                 <div class="size">
-                    <h3>Sizes -- Tamaños</h3>
+                    <h3>Inches -- Pulgadas</h3>
                     <h5>16 "</h5>
                     <h5>18 "</h5>
                     <h5>20 "</h5>
+                    <h5>22 "</h5>
                     <h5>24 "</h5>
                     <h5>26 "</h5>
                 </div>
                 <div class="price">
                     <h3>Price -- Precios</h3>
+                    <h5>$85 </h5>
                     <h5>$90 </h5>
                     <h5>$100 </h5>
                     <h5>$110 </h5>
@@ -66,7 +68,7 @@
                     aria-hidden="true">
                     Jrflawless_hair</i></a>
             <a href="https://wa.me/9177247960?text=Hello"><i class="fa fa-whatsapp" aria-hidden="true"></i>
-                    917-724-7960</i></a>
+                917-724-7960</i></a>
 
 
 
